crates/tribute-front/tests/snapshots/cps_lowering__cps_case_scrutinee_keeps_outer_consumer.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: "run_ast_pipeline_with_ir(db, source)"
---
core.module @test {
  !t0 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})
  !t1 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))

  func.func @effectful(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.perform %1 {ability_ref = core.ability_ref() {name = @Flag}, op_name = @read} : tribute_rt.anyref
      func.return %2
  }
  func.func @after(%0: core.i32) -> core.i32 attributes {tribute.calling_convention = 0} {
      %1 = arith.const {value = 1} : core.i32
      %2 = func.call %0, %1 {callee = @"Nat::+", tribute.calling_convention = 0} : core.i32
      func.return %2
  }
  func.func @run(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = closure.lambda(%3: tribute_rt.anyref) -> tribute_rt.anyref [%1] {
          %4 = core.unrealized_conversion_cast %3 : core.i1
          %5 = arith.const {value = true} : core.i1
          %6 = arith.cmpi %4, %5 {predicate = @eq} : core.i1
          %7 = scf.if %6 : core.i32 {
              %8 = arith.const {value = 40} : core.i32
              scf.yield %8
          } {
              %9 = arith.const {value = 0} : core.i32
              scf.yield %9
          }
          %10 = func.call %7 {callee = @after, tribute.calling_convention = 0} : core.i32
          %11 = core.unrealized_conversion_cast %1 : !t1
          %12 = core.unrealized_conversion_cast %10 : tribute_rt.anyref
          %13 = func.call_indirect %11, %12 : tribute_rt.anyref
          func.return %13
      }
      %14 = func.call %0, %2 {callee = @effectful, tribute.calling_convention = 2} : tribute_rt.anyref
      func.return %14
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
