crates/tribute-front/tests/snapshots/cps_lowering__handle_in_cps_parent_is_not_renormalized.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: "run_ast_pipeline_with_ir(db, source)"
---
core.module @test {
  !__tribute_cps_control = adt.enum() {name = @__tribute_cps_control, variants = [[@Normal, [tribute_rt.anyref]], [@Escape, [core.i32, tribute_rt.anyref]]]}
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @read(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.legacy_perform %1 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      func.return %2
  }
  func.func @"test::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      %3 = adt.variant_new %2 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
      func.return %3
  }
  func.func @run(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = closure.lambda(%3: tribute_rt.anyref) -> tribute_rt.anyref [%1] {
          %4 = core.unrealized_conversion_cast %3 : core.nil
          %5 = closure.lambda(%6: tribute_rt.anyref) -> tribute_rt.anyref {
              %7 = func.call %0, %6 {callee = @read, tribute.calling_convention = 2} : tribute_rt.anyref
              func.return %7
          }
          %8 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
          %9 = closure.new %8 {func_ref = @"test::__lambda_0"} : !t0
          %10 = func.call_indirect %5, %9 : tribute_rt.anyref
          %11 = closure.lambda(%12: tribute_rt.anyref, %13: core.i32, %14: core.i32, %15: tribute_rt.anyref) -> tribute_rt.anyref {
              %16 = arith.const {value = 1} : core.i1
              %17 = scf.if %16 : tribute_rt.anyref {
                  %18 = closure.lambda(%19: tribute_rt.anyref) -> tribute_rt.anyref [%13] {
                      %20 = adt.variant_new %13, %19 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                      func.return %20
                  }
                  %21 = arith.const {value = 41} : core.i32
                  %22 = core.unrealized_conversion_cast %12 : !t0
                  %23 = core.unrealized_conversion_cast %21 : tribute_rt.anyref
                  %24 = func.call_indirect %22, %23 : tribute_rt.anyref
                  %25 = adt.variant_is %24 {tag = @Normal, type = !__tribute_cps_control} : core.i1
                  %26 = scf.if %25 : tribute_rt.anyref {
                      %27 = adt.variant_cast %24 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                      %28 = adt.variant_get %27 {field = 0, tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                      %29 = func.call_indirect %18, %28 : tribute_rt.anyref
                      %30 = adt.variant_cast %29 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                      %31 = adt.variant_get %30 {field = 0, tag = @Escape, type = !__tribute_cps_control} : core.i32
                      %32 = adt.variant_get %30 {field = 1, tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                      %33 = arith.cmpi %31, %13 {predicate = @eq} : core.i1
                      %34 = scf.if %33 : tribute_rt.anyref {
                          %35 = adt.variant_new %32 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                          scf.yield %35
                      } {
                          scf.yield %29
                      }
                      scf.yield %34
                  } {
                      scf.yield %24
                  }
                  scf.yield %26
              } {
                  func.unreachable
              }
              func.return %17
          }
          %36 = arith.const {value = 0} : tribute_rt.anyref
          %37 = effect.fresh_prompt_tag : core.i32
          %38 = ability.legacy_handle_dispatch %10, %37, %11, %36 {result_type = tribute_rt.anyref, tag = 0} : tribute_rt.anyref {
              ability.done {
                ^bb12(%39: tribute_rt.anyref):
                  %40 = core.unrealized_conversion_cast %39 : core.i32
                  %41 = core.unrealized_conversion_cast %1 : !t0
                  %42 = core.unrealized_conversion_cast %40 : tribute_rt.anyref
                  %43 = func.call_indirect %41, %42 : tribute_rt.anyref
                  scf.yield %43
              }
              ability.suspend {ability_ref = core.ability_ref() {name = @State}, op_name = @get} {
                ^bb13(%44: tribute_rt.anyref, %45: tribute_rt.anyref):
                  scf.yield %45
              }
          } {
            ^bb14(%46: tribute_rt.anyref):
              %47 = core.unrealized_conversion_cast %1 : !t0
              %48 = func.call_indirect %47, %46 : tribute_rt.anyref
              scf.yield %48
          }
          func.return %38
      }
      %49 = ability.legacy_perform %2 {ability_ref = core.ability_ref() {name = @Trace}, op_name = @before} : tribute_rt.anyref
      func.return %49
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
