crates/tribute-front/tests/snapshots/cps_lowering__handle_is_source_value_in_strict_constructor_and_call_contexts.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: "run_ast_pipeline_with_ir(db, source)"
---
core.module @test {
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !Boxed = adt.enum() {name = @Boxed, variants = [[@Boxed, [tribute_rt.anyref]]]}
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @read(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.perform %1 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      func.return %2
  }
  func.func @consume(%0: tribute_rt.anyref) -> core.i32 attributes {tribute.calling_convention = 0} {
      %1 = adt.variant_is %0 {tag = @Boxed, type = !Boxed} : core.i1
      %2 = scf.if %1 : core.i32 {
          %3 = adt.variant_cast %0 {tag = @Boxed, type = !Boxed} : !Boxed
          %4 = adt.variant_get %3 {field = 0, tag = @Boxed, type = !Boxed} : tribute_rt.anyref
          %5 = core.unrealized_conversion_cast %4 : core.i32
          scf.yield %5
      } {
          func.unreachable
          %6 = arith.const {value = unit} : core.nil
          %7 = core.unrealized_conversion_cast %6 : core.i32
          scf.yield %7
      }
      func.return %2
  }
  func.func @"test::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      func.return %2
  }
  func.func @run() -> core.i32 attributes {tribute.calling_convention = 0} {
      %0 = closure.lambda(%1: tribute_rt.anyref) -> tribute_rt.anyref {
          %2 = adt.ref_null {type = !t1} : !t1
          %3 = func.call %2, %1 {callee = @read, tribute.calling_convention = 2} : tribute_rt.anyref
          func.return %3
      }
      %4 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %5 = closure.new %4 {func_ref = @"test::__lambda_0"} : !t0
      %6 = func.call_indirect %0, %5 : tribute_rt.anyref
      %7 = closure.lambda(%8: tribute_rt.anyref, %9: core.i32, %10: tribute_rt.anyref) -> tribute_rt.anyref {
          %11 = arith.const {value = 1} : core.i1
          %12 = scf.if %11 : tribute_rt.anyref {
              %13 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %14 = closure.new %13 {func_ref = @"test::__lambda_0"} : !t0
              %15 = arith.const {value = 41} : core.i32
              %16 = core.unrealized_conversion_cast %8 : !t0
              %17 = core.unrealized_conversion_cast %15 : tribute_rt.anyref
              %18 = func.call_indirect %16, %17 : tribute_rt.anyref
              %19 = func.call_indirect %14, %18 : tribute_rt.anyref
              scf.yield %19
          } {
              func.unreachable
          }
          func.return %12
      }
      %20 = arith.const {value = 0} : tribute_rt.anyref
      %21 = ability.handle_dispatch %6, %7, %20 {result_type = tribute_rt.anyref, tag = 0} : tribute_rt.anyref {
          ability.done {
            ^bb6(%22: tribute_rt.anyref):
              %23 = core.unrealized_conversion_cast %22 : core.i32
              %24 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %25 = closure.new %24 {func_ref = @"test::__lambda_0"} : !t0
              %26 = core.unrealized_conversion_cast %23 : tribute_rt.anyref
              %27 = func.call_indirect %25, %26 : tribute_rt.anyref
              scf.yield %27
          }
          ability.suspend {ability_ref = core.ability_ref() {name = @State}, op_name = @get} {
            ^bb7(%28: tribute_rt.anyref, %29: tribute_rt.anyref):
              %30 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %31 = closure.new %30 {func_ref = @"test::__lambda_0"} : !t0
              %32 = arith.const {value = 41} : core.i32
              %33 = core.unrealized_conversion_cast %28 : !t0
              %34 = core.unrealized_conversion_cast %32 : tribute_rt.anyref
              %35 = func.call_indirect %33, %34 : tribute_rt.anyref
              %36 = func.call_indirect %31, %35 : tribute_rt.anyref
              scf.yield %36
          }
      }
      %37 = core.unrealized_conversion_cast %21 : core.i32
      %38 = core.unrealized_conversion_cast %37 : tribute_rt.anyref
      %39 = adt.variant_new %38 {tag = @Boxed, type = !Boxed} : tribute_rt.anyref
      %40 = func.call %39 {callee = @consume, tribute.calling_convention = 0} : core.i32
      func.return %40
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
