crates/tribute-front/tests/snapshots/cps_lowering__handle_with_do_and_op_arms.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @get_state(%0: !t1) -> core.i32 attributes {tribute.calling_convention = 1} {
      %1 = ability.call {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      %2 = core.unrealized_conversion_cast %1 : core.i32
      func.return %2
  }
  func.func @"test::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      func.return %2
  }
  func.func @run() -> core.i32 attributes {tribute.calling_convention = 0} {
      %0 = closure.lambda(%1: tribute_rt.anyref) -> tribute_rt.anyref {
          %2 = adt.ref_null {type = !t1} : !t1
          %3 = func.call %2 {callee = @get_state, tribute.calling_convention = 1} : core.i32
          %4 = core.unrealized_conversion_cast %1 : !t0
          %5 = core.unrealized_conversion_cast %3 : tribute_rt.anyref
          %6 = func.call_indirect %4, %5 : tribute_rt.anyref
          func.return %6
      }
      %7 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %8 = closure.new %7 {func_ref = @"test::__lambda_0"} : !t0
      %9 = func.call_indirect %0, %8 : tribute_rt.anyref
      %10 = closure.lambda(%11: tribute_rt.anyref, %12: core.i32, %13: tribute_rt.anyref) -> tribute_rt.anyref {
          %14 = arith.const {value = 1972422014} : core.i32
          %15 = arith.cmpi %12, %14 {predicate = @eq} : core.i1
          %16 = scf.if %15 : tribute_rt.anyref {
              %17 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %18 = closure.new %17 {func_ref = @"test::__lambda_0"} : !t0
              %19 = arith.const {value = 42} : core.i32
              %20 = core.unrealized_conversion_cast %11 : !t0
              %21 = core.unrealized_conversion_cast %19 : tribute_rt.anyref
              %22 = func.call_indirect %20, %21 : tribute_rt.anyref
              %23 = func.call_indirect %18, %22 : tribute_rt.anyref
              scf.yield %23
          } {
              %24 = arith.const {value = 1} : core.i1
              %25 = scf.if %24 : tribute_rt.anyref {
                  %26 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
                  %27 = closure.new %26 {func_ref = @"test::__lambda_0"} : !t0
                  %28 = arith.const {value = unit} : core.nil
                  %29 = core.unrealized_conversion_cast %11 : !t0
                  %30 = core.unrealized_conversion_cast %28 : tribute_rt.anyref
                  %31 = func.call_indirect %29, %30 : tribute_rt.anyref
                  %32 = func.call_indirect %27, %31 : tribute_rt.anyref
                  scf.yield %32
              } {
                  func.unreachable
              }
              scf.yield %25
          }
          func.return %16
      }
      %33 = arith.const {value = 0} : tribute_rt.anyref
      %34 = ability.handle_dispatch %9, %10, %33 {result_type = tribute_rt.anyref, tag = 0} : tribute_rt.anyref {
          ability.done {
            ^bb8(%35: tribute_rt.anyref):
              %36 = core.unrealized_conversion_cast %35 : core.i32
              %37 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %38 = closure.new %37 {func_ref = @"test::__lambda_0"} : !t0
              %39 = core.unrealized_conversion_cast %36 : tribute_rt.anyref
              %40 = func.call_indirect %38, %39 : tribute_rt.anyref
              scf.yield %40
          }
          ability.suspend {ability_ref = core.ability_ref() {name = @State}, op_name = @get} {
            ^bb9(%41: tribute_rt.anyref, %42: tribute_rt.anyref):
              %43 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %44 = closure.new %43 {func_ref = @"test::__lambda_0"} : !t0
              %45 = arith.const {value = 42} : core.i32
              %46 = core.unrealized_conversion_cast %41 : !t0
              %47 = core.unrealized_conversion_cast %45 : tribute_rt.anyref
              %48 = func.call_indirect %46, %47 : tribute_rt.anyref
              %49 = func.call_indirect %44, %48 : tribute_rt.anyref
              scf.yield %49
          }
          ability.suspend {ability_ref = core.ability_ref() {name = @State}, op_name = @set} {
            ^bb10(%50: tribute_rt.anyref, %51: tribute_rt.anyref):
              %52 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %53 = closure.new %52 {func_ref = @"test::__lambda_0"} : !t0
              %54 = arith.const {value = unit} : core.nil
              %55 = core.unrealized_conversion_cast %50 : !t0
              %56 = core.unrealized_conversion_cast %54 : tribute_rt.anyref
              %57 = func.call_indirect %55, %56 : tribute_rt.anyref
              %58 = func.call_indirect %53, %57 : tribute_rt.anyref
              scf.yield %58
          }
      }
      %59 = core.unrealized_conversion_cast %34 : core.i32
      func.return %59
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
